@@ -39,6 +39,7 @@
 		<div id="changelog20201003">
 			<ul>
 				<li>Added Antonio's set</li>
+				<li>Added magical attack modifiers to Extended Info - Attack Modifiers</li>
 			</ul>
 		</div><br>
 		<span><b>2020-10-01</b></span>
@@ -125,7 +126,7 @@
 						<td class="subheader" bgcolor="#DDDDFF">
 							<div style="float: left; padding: 3px;"><span id="nm013">Extended Info</span></div>
 								<div style="float: right; padding-right: 3px;">
-									<select name="A_Kakutyou" onchange="KakutyouKansuu2() | StAllCalc()"></select>
+									<select name="A_Kakutyou" onchange="KakutyouKansuu2() | calc()"></select>
 								</div>
 								<div style="clear: both;"></div>
 							</td>
